# ml_base

./: Datatonic.md  eda_classification_notebook.ipynb  eda_classification_notebook.py  multiclass_classification_improved.ipynb  multiclass_classification_notebook.ipynb  multiclass_data_with_nulls.csv  pyproject.toml  regression_notebook.ipynb  sample_classification_data.csv  sample_multiclass_data.csv  sample_regression_data.csv
