[project]
name = "ab"
version = "0.1.0"
description = ""
authors = [
    {name = "Me"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "ipykernel (>=6.30.1,<7.0.0)",
    "xgboost (>=3.0.4,<4.0.0)",
    "notebook (>=7.4.5,<8.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "imblearn (>=0.0,<0.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false